--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -10,7 +10,7 @@ hero:
 
   # slider background image loop
   slider_image:
-    - "images/slider/slider-hugo-2-moi.png"
+    - "images/slider/slider-somrat-1-moi.jpg"
     - "images/slider/slider-2.jpg"
     - "images/slider/slider-3.jpg"
 
