--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -6,7 +6,7 @@ hero:
   occupations:
     - "Web Designer"
     - "Web Developer"
-    - "Database Manager"
+    - "Web Writer"
 
   # slider background image loop
   slider_image:
