--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -12,7 +12,7 @@ hero:
   slider_image:
     - "images/slider/slider-somrat-1-moi.jpg"
     - "images/slider/slider-3.jpg"
-    - "images/slider/slider-3.jpg"
+    - "images/slider/cat-eyes-slider-3.jpg"
 
   # button
   button:
