--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -39,7 +39,7 @@ about:
   button:
     enable : true
     label : "CONTACT ME"
-    link : "#contact" # you can put your cv in static folder and give the path here.
+    link : "https://test-mycreateurdesite.netlify.app/#contact" # you can put your cv in static folder and give the path here.
 
 ###########################3 Experience ##############################
 experience:
