--- a/exampleSite/data/fr/homepage.yml
+++ b/exampleSite/data/fr/homepage.yml
@@ -29,8 +29,8 @@ fullscreen_nav:
   last_name : "SOMRAT"
   
 
-########################### A propos ##################################
-about:
+########################### About ##################################
+à propos:
   enable : true
   image : "images/backgrounds/workcatandme-1-hugo-site.jpg"
   title : "A PROPOS"
@@ -65,7 +65,7 @@ experience:
       content : "Database management is among the fundamental processes in the software field of computing. I know MS Access very well."
 
 
-############################### Compétences #################################
+############################### Skill #################################
 skill:
   enable : true
   title : "SKILL"
@@ -87,7 +87,7 @@ skill:
       parcentage : "85%"
 
 
-################################### Services ##############################3
+################################### Service ##############################3
 service:
   enable : true
   title : "SERVICES"
