--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -77,42 +77,6 @@ name = "Contact"
 URL = "#contact"
 weight = 6
 
-[languages]
-    [languages.fr-fr]
-        languagename = "Français"
-
-        [languages.fr-fr.menu]
-
-    [[languages.fr-fr.menu.main]]
-name = "Accueil"
-URL = "#home"
-weight = 1
-
-[[languages.fr-fr.menu.main]]
-name = "A propos"
-URL = "#about"
-weight = 2
-
-[[languages.fr-fr.menu.main]]
-name = "Services"
-URL = "#service"
-weight = 3
-
-[[languages.fr-fr.menu.main]]
-name = "Portfolio"
-URL = "#portfolio"
-weight = 4
-
-[[languages.fr-fr.menu.main]]
-name = "Témoignages"
-URL = "#testimonial"
-weight = 5
-
-[[languages.fr-fr.menu.main]]
-name = "Contact"
-URL = "#contact"
-weight = 6
-
 
 #################### default parameters ################################
 [params]
@@ -167,5 +131,40 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
-# copyright
+# main menu
+[languages]
+    [languages.fr-fr]
+        languagename = "Français"
+
+        [languages.fr-fr.menu]
+
+    [[languages.fr-fr.menu.main]]
+name = "Accueil"
+URL = "#home"
+weight = 1
+
+[[languages.fr-fr.menu.main]]
+name = "A propos"
+URL = "#about"
+weight = 2
+
+[[languages.fr-fr.menu.main]]
+name = "Services"
+URL = "#service"
+weight = 3
+
+[[languages.fr-fr.menu.main]]
+name = "Portfolio"
+URL = "#portfolio"
+weight = 4
+
+[[languages.fr-fr.menu.main]]
+name = "Témoignages"
+URL = "#testimonial"
+weight = 5
+
+[[languages.fr-fr.menu.main]]
+name = "Contact"
+URL = "#contact"
+weight = 6# copyright
 copyright = "Copyright &copy; 2020 a hugo theme by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
