--- a/exampleSite/data/fr/homepage.yml
+++ b/exampleSite/data/fr/homepage.yml
@@ -23,48 +23,14 @@ hero:
 
 ####################### Full screen navigation #####################
 fullscreen_nav:
-  enable : false
+  enable : true
   bg_image : "images/backgrounds/full-nav-bg.jpg"
   first_name : "MacGyver"
   last_name : "SOMRAT"
-
-
-############################## navigation ###############################
-
-# main menu
-[[menu.main]]
-name = "Accueil"
-URL = "#home"
-weight = 1
-
-[[menu.main]]
-name = "A propos"
-URL = "#about"
-weight = 2
-
-[[menu.main]]
-name = "Services"
-URL = "#service"
-weight = 3
-
-[[menu.main]]
-name = "Portfolio"
-URL = "#portfolio"
-weight = 4
-
-[[menu.main]]
-name = "Témoignages"
-URL = "#testimonial"
-weight = 5
-
-[[menu.main]]
-name = "Contact"
-URL = "#contact"
-weight = 6
   
 
-########################### About ##################################
-about:
+########################### A propos ##################################
+à propos:
   enable : true
   image : "images/backgrounds/workcatandme-1-hugo-site.jpg"
   title : "A PROPOS"
