--- a/exampleSite/data/fr/homepage.yml
+++ b/exampleSite/data/fr/homepage.yml
@@ -25,8 +25,8 @@ hero:
 fullscreen_nav:
   enable : true
   bg_image : "images/backgrounds/full-nav-bg.jpg"
-  first_name : "MacGyver"
-  last_name : "SOMRAT"
+  first_name : "Laurent"
+  last_name : "MyCréateurdeSite"
   
 
 ########################### About ##################################
@@ -34,7 +34,7 @@ about:
   enable : true
   image : "images/backgrounds/workcatandme-1-hugo-site.jpg"
   title : "A PROPOS"
-  content : "Je m'appelle Laurent, Web Developpeur professionnel. I love to write code, it's my passoin. I am here to help you, i am here to design your web page. i can help you to describe yourself in the best way.<br>No matter how difficult your web page is, i will find an easy way and complete your work anyway. Stay connect with me............😊"
+  content : "Je m'appelle Laurent, et je suis Web Developpeur professionnel. Coder est ma passion. Je suis là pour vous aider à réaliser vos projets et construire vos outils numériques. Je peux également vous aider à construire votre image numérique.<br>Peu importe la difficulté, je trouverai facilement le moyen de concrétiser vos projets. Restons connectés............😊"
   # button
   button:
     enable : true
@@ -50,25 +50,25 @@ experience:
     - name : "Web Developpeur"
       company :
       duration :
-      content : "I work with HTML, CSS, and Javascript to create websites and web applications like Personal, Business, Blog, E-comerches etc."
+      content : "Je travaille avec HTML, CSS, Javascript et la GoLang pour créer des sites web et des applications que ce soit pour votre business, un blog, un site E-commerce etc."
       
     # experience item loop
     - name : "Web Designer"
       company :
       duration :
-      content : "Graphic design is art with a purpose. I love illustration, so logo desing is my favorite work. But i can do many things with graphics."
+      content : "Le Web Design c'est l'art avec un but. J'adore la mise en page, et également la création de logo. Mais je peux faire beaucoup de choses avec le Web Design."
       
     # experience item loop
     - name : "Rédacteur Web"
       company :
       duration :
-      content : "Database management is among the fundamental processes in the software field of computing. I know MS Access very well."
+      content : "La réadaction web est une étape essentielle pour la conception et le référencement futur de votre site web."
 
 
 ############################### Skill #################################
 skill:
   enable : true
-  title : "Compétences"
+  title : "COMPETENCES"
   skill_list:
     # skill item loop
     - name : "Web Developpement"
