--- a/exampleSite/data/en/homepage.yml
+++ b/exampleSite/data/en/homepage.yml
@@ -256,24 +256,24 @@ funfacts:
   enable : true
   funfacts_list:
     # funfacts item loop
-    - name : "HOURS TO WORK"
+    - name : "HANDS WORKING"
       image : "images/icons/works.png"
-      count : "900"
+      count : "2"
       
     # funfacts item loop
     - name : "HAPPY CLIENT"
       image : "images/icons/happy.png"
-      count : "200"
+      count : "100"
       
     # funfacts item loop
     - name : "FINISHED PROJECT"
       image : "images/icons/project.png"
-      count : "250"
+      count : "150"
       
     # funfacts item loop
     - name : "CUPS OF COFFEE"
       image : "images/icons/coffee.png"
-      count : "150"
+      count : "125"
 
 
 ############################## contact ###########################
