--- a/exampleSite/data/fr/homepage.yml
+++ b/exampleSite/data/fr/homepage.yml
@@ -105,7 +105,7 @@ service:
       image : "images/icons/dbms.png"
       
     # service item loop
-    - name : "Développement de Sites Web"
+    - name : "Community Management"
       image : "images/icons/software-development.png"
       
     # service item loop
