--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -46,33 +46,39 @@ link = "plugins/owl-carousel/owl.carousel.min.js"
 
 ############################## navigation ###############################
 
+defaultContentLanguage = "en"
+
+[languages.en]
+weight = 0
+languageName = "English"
+
 # main menu
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "Home"
 URL = "#home"
 weight = 1
 
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "About me"
 URL = "#about"
 weight = 2
 
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "Service"
 URL = "#service"
 weight = 3
 
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "Portfolio"
 URL = "#portfolio"
 weight = 4
 
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "Testimonial"
 URL = "#testimonial"
 weight = 5
 
-[[menu.main]]
+[[languages.en.menu.main]]
 name = "Contact"
 URL = "#contact"
 weight = 6
