--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -121,7 +121,7 @@ contentDir = "content/english"
 weight = 1
 home = "Home"
 # copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
+copyright = "Copyright &copy; 2020 with GoLang by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
 
 
 ################################### French language #####################################
@@ -132,4 +132,4 @@ contentDir = "content/french"
 weight = 2
 home = "Accueil"
 # copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
+copyright = "Copyright &copy; 2020 avec GoLang by [MyCréateurdeSite](https://www.mycreateurdesite.fr/)"
